webinterface: fixed flash messages appearing behind the jquery dialog fixed font

--- a/webinterface/static/css/main.css
+++ b/webinterface/static/css/main.css
@@ -4,13 +4,12 @@ html {
 
 body {
 	margin: 0;
+	font-family: Helvetica, Arial, sans-serif;
 }
 
 #container {
-	font-family: sans-serif;
 	width: 70%;
 	margin: 0 auto;  
-	font-family: Helvetica, Arial, sans-serif;
 	background: white;
 	box-shadow: 0px 0px 20px 0px black;
 	min-height: 100%;
@@ -56,7 +55,7 @@ footer {
 	position: fixed;
 	bottom: 0%;
 	right: 0%;
-	z-index: 100;
+	z-index: 1000;
 }
 
 .flash_message {
